# fit2025

./: .gitignore  bovw_test_normal.py  make_dataset.ipynb  plot.py  plot_bovw.py  vw_indexing.py  vw_indexing_cuda.py  vw_indexing_nn.py  vw_indexing_nn_cuda.py  vw_test_autolist.py  vw_test_bf_autolist_park.py  vw_test_bf_normal_park.py  vw_test_bovw_list_v2.py  vw_test_normal.py  vw_test_opt_bf_v3.py
dataset/output/matches/: IMG_3266.desc  IMG_3266.feat  IMG_3267.desc  IMG_3267.feat  IMG_3268.desc  IMG_3268.feat  IMG_3269.desc  IMG_3269.feat  IMG_3270.desc  IMG_3270.feat  IMG_3271.desc  IMG_3271.feat  IMG_3272.desc  IMG_3272.feat  IMG_3273.desc  IMG_3273.feat  IMG_3274.desc  IMG_3274.feat  IMG_3275.desc  IMG_3275.feat  IMG_3276.desc  IMG_3276.feat  IMG_3277.desc  IMG_3277.feat  IMG_3278.desc  IMG_3278.feat  IMG_3279.desc  IMG_3279.feat  IMG_3280.desc  IMG_3280.feat  IMG_3281.desc  IMG_3281.feat  IMG_3282.desc  IMG_3282.feat  IMG_3283.desc  IMG_3283.feat  IMG_3284.desc  IMG_3284.feat  IMG_3285.desc  IMG_3285.feat  (+549 more)
paper_backup/: FIT.docx  FIT_backup.docx  ~$FIT.docx
proj_cpp/: CMakeLists.txt  main  main.cpp  vw_bf.py
